# GraspCoT

./: README.md  pyproject.toml
llava/: __init__.py  constants.py  conversation.py  mm_utils.py  utils.py
llava/eval/: generate_scene_grasp.py
llava/model/: __init__.py  builder.py  graspsample.py  hungarian_assigner_3d.py  llava_arch.py  match_cost.py  nms_free_coder.py  petr_head_v2.py  petr_transformer.py  positional_encoding.py
llava/model/language_model/: llava_llama_v2.py  modeling_llama_v2.py
llava/model/multimodal_encoder/: builder.py  clip_encoder.py  unproject.py  video_encoder.py  voxel_encoder.py
llava/train/: GraspcotDataset.py  image.py  llava_trainer.py  train.py
scripts/: create_grasp_data.py  create_grasp_data.sh
scripts/eval/: eval_scene_grasp.py
scripts/eval/utils/: test_utils.py
scripts/train/: dist_train.sh
